

syntax = "proto3";

package starstart.cgw.pbgens;

enum PWModule{
	CGW = 0;
};


enum PWCommand{
	BET = 0 ;//投注
};

message PWBet //投注一注
{
	string ltype = 1;//游戏类型
	string play_type = 2;//玩法类型
	string bet_content = 3;//投注内容
	uint32 bet_counts = 4;//注数
	double bet_amounts = 5;//投注金额
	int32  bet_money_unit = 6;//投注单元，以元为单位的
	uint32 bet_multi = 7;//投注倍数
	double bonner_money_mode = 8;//奖金模式
	double bonner_rate_mode = 9;//奖金模式
	string vldcode = 20;//校验码
	
	string lname = 31;//玩法名称
	string merchantid = 35;
	
}

message PWBetResult //投注一注
{
	PWBet bet = 1;//投注的内容
	string vldcode = 20;//校验码
	string serial_num = 30;//彩票序列号
	string bet_status = 31;//投注状态
	string failreason = 32;//失败原因
}

message PWAutoChase //追号内容
{
	string issue_no = 1; //期号
	string bet_multi = 2; //倍数
	string bet_datetime = 3;//预期投注时间
	uint32 total_bet_counts = 4;//注数
	double total_bet_amounts = 5;//总投注金额
}

message PWWager //投注一单，包括多注
{
	//#wname,balls,count,money,moneyUnit,multi,bonnerMode
	repeated PWBet bets = 1;//注码内容
	bool is_auto = 20;//是否追号
	repeated PWAutoChase chases = 21 ;//追号内容
	string issue_no = 31 ;//投注期号（不追号的时候填写）
	bool win_stop = 32 ;//中奖后停止追号
	
	string submit_datetime = 33;//投注时间
	string user_id  = 34;//投注用户
	string channel = 35;//投注渠道
	string merchantid = 36;//所属商户
	string version = 37;//投注单的版本
	string merchantuserid = 38;//商户对应的用户编号
	
};

message PWRetWager
{
	string retcode = 1; //返回状态码，000000，表示成功
	string retmsg = 2;//返回消息
	repeated PWBetResult betrets = 10 ;//投注结果返回
	
};


message PBFramePacket{
	string gcmd = 1 ;//代理的gcmd
	string exts = 2;//扩展头
	string jsondatas = 3 ;//请求的json数据
	bytes pbdatas = 4;//请求的pb数据 
	string pack_id = 11;//包在多个请求中的的id
	repeated PBFramePacket nextpacks = 20;//下一个请求
}

message PWMergeProxy
{
	repeated PBFramePacket packets = 1 ;//需要合并的请求
}

message PWRetMerges
{
	int32	retcode = 1;//返回状态码
	string  retmsg  = 2;//返回的消息信息
	repeated PBFramePacket retpack = 3 ;//需要合并的请求
}

